<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        tools:context=".Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_login"
        android:id="@+id/textView_login"
        android:layout_gravity="center"/>

    <LinearLayout
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/text_username"
                android:id="@+id/text_username" android:layout_gravity="center_horizontal|center_vertical"/>
        <EditText android:id="@+id/edit_username"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:hint="@string/edit_username" android:layout_weight="1"
            android:width="0dp"
            android:inputType="text|textShortMessage|textPersonName"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_password"
            android:id="@+id/text_password" android:layout_gravity="center_horizontal|center_vertical"/>
        <EditText android:id="@+id/edit_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_password" android:layout_weight="1"
            android:width="0dp"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:id="@+id/button_login"
        android:onClick="showHome"
        android:layout_gravity="center"/>

</LinearLayout>